# HyperDiskUsage

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml  windows-msi.yml
hyperdu-cli/: Cargo.toml
hyperdu-cli/src/: main.rs
hyperdu-cli/tests/: du_golden.rs
hyperdu-core/: Cargo.toml
hyperdu-core/benches/: scan_bench.rs
hyperdu-core/src/: classify.rs  common_ops.rs  constants.rs  error_handling.rs  filters.rs  fs_strategy.rs  incremental.rs  lib.rs  memory_pool.rs  options.rs  rollup.rs  scanner.rs  scheduler.rs  tuning.rs
hyperdu-core/src/platform/: linux_batch_stat.rs  linux_helpers.rs  linux_uring_impl.rs  linux_x86_64_impl.rs  linux_x86_64_iouring.rs  macos_impl.rs  mod.rs  unix_fallback_impl.rs  windows_impl.rs
hyperdu-core/tests/: hardlink_dedupe.rs  rollup_and_filters.rs
hyperdu-gui/: Cargo.toml
hyperdu-gui/src/: main.rs  ui.rs
packaging/completions/: hyperdu.bash  hyperdu.fish  hyperdu.zsh
packaging/deb/: hyperdu-cli.postinst  hyperdu-cli.prerm
packaging/flatpak/: org.hyperdu.GUI.yaml
packaging/man/: hyperdu.1
packaging/rpm/: hyperdu-cli.post
scripts/: bench.sh  build_print.ps1  build_print.sh  clippy_fix.sh  fmt_strict.sh  lint.ps1  lint.sh  lint_all.sh  lint_cross.sh  package_appimage.sh  package_brew.sh  package_flatpak.sh  package_macos_dmg.sh  package_release.ps1  package_release.sh  package_scoop.ps1  package_snap.sh  package_winget.ps1  release_tag.ps1  release_tag.sh  setup_hooks.sh
snap/: snapcraft.yaml
