[package]
name = "hyperdu-cli"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "HyperDU CLI - ultra-fast disk usage analyzer"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
humansize = "2.1"
serde_json = "1.0"
csv = "1.3"
env_logger = "0.11"
log = "0.4"
hyperdu-core = { path = "../hyperdu-core" }
color-eyre = { version = "0.6", optional = true }
profiling = { version = "1", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
dashmap = "5.5"
ctrlc = "3"
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[dev-dependencies]
tempfile = "3.10"


[features]
default = ["time-format"]
time-format = ["dep:chrono"]
debug-eyre = ["dep:color-eyre"]
prof-tracy = ["dep:profiling", "hyperdu-core/prof-tracy"]
prof-puffin = ["dep:profiling", "hyperdu-core/prof-puffin"]
rayon-par = ["hyperdu-core/rayon-par"]

# Enable mimalloc for non-MinGW targets to avoid cross issues on windows-gnu
[target.'cfg(not(all(target_os = "windows", target_env = "gnu")))'.dependencies]
hyperdu-core = { path = "../hyperdu-core", features = ["mimalloc"] }

# Debian packaging (cargo-deb)
[package.metadata.deb]
section = "utils"
priority = "optional"
depends = "$auto"
maintainer = "HyperDU Maintainers <maintainers@example.com>"
extended-description = "Hyper-fast disk usage analyzer CLI."
assets = [
  ["../README.md", "/usr/share/doc/hyperdu/README.md", "644"],
  ["../LICENSE", "/usr/share/doc/hyperdu/LICENSE", "644"],
  ["../packaging/man/hyperdu.1", "/usr/share/man/man1/hyperdu.1", "644"],
  ["../packaging/completions/hyperdu.bash", "/usr/share/bash-completion/completions/hyperdu", "644"],
  ["../packaging/completions/hyperdu.zsh", "/usr/share/zsh/site-functions/_hyperdu", "644"],
  ["../packaging/completions/hyperdu.fish", "/usr/share/fish/vendor_completions.d/hyperdu.fish", "644"],
]

[package.metadata.deb.maintainer-scripts]
postinst = "../packaging/deb/hyperdu-cli.postinst"
prerm = "../packaging/deb/hyperdu-cli.prerm"

# RPM packaging (cargo-generate-rpm)
[package.metadata.generate-rpm]
summary = "Hyper-fast disk usage analyzer CLI"
license = "MIT"
group = "Applications/System"
auto-req = true
requires = []
assets = [
  { source = "../target/release/hyperdu-cli", dest = "/usr/bin/hyperdu", mode = "755" },
  { source = "../README.md", dest = "/usr/share/doc/hyperdu/README.md", mode = "644" },
  { source = "../LICENSE", dest = "/usr/share/doc/hyperdu/LICENSE", mode = "644" },
  { source = "../packaging/man/hyperdu.1", dest = "/usr/share/man/man1/hyperdu.1", mode = "644" },
  { source = "../packaging/completions/hyperdu.bash", dest = "/usr/share/bash-completion/completions/hyperdu", mode = "644" },
  { source = "../packaging/completions/hyperdu.zsh", dest = "/usr/share/zsh/site-functions/_hyperdu", mode = "644" },
  { source = "../packaging/completions/hyperdu.fish", dest = "/usr/share/fish/vendor_completions.d/hyperdu.fish", mode = "644" },
]
post_install_script_file = "../packaging/rpm/hyperdu-cli.post"
pre_uninstall_script_file = "../packaging/rpm/hyperdu-cli.preun"
